--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
     {% endif %}
     {% endwith %}
 
-   <div id="mainpart">
+   <div class="toppart">
         <!-- 홈 화면 제목 -->
         <h1>welc<span style="color: #66cc33;">o</span>me!</h1>
     </div>
