--- a/templates/wb.html
+++ b/templates/wb.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>세미콜론 단어장</title>
     <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square.css" rel="stylesheet">
-    <link rel="shortcut icon" href="../favicon.png">
-    <link rel="stylesheet" href="../static/css/wb.css">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.png') }}" type="image/x-icon">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/wb.css') }}">
 </head>
 <body>
     <!-- sidebar -->
