--- a/static/css/style.css
+++ b/static/css/style.css
@@ -306,17 +306,19 @@ select {
 
 /* 오른쪽 배치 여유롭게 */
 #mainpart {
-  margin-left: 300px;                         /* 사이드바 폭(300px)에 맞춤 */
+  margin-left: 8%;                        /* 사이드바 폭(300px)에 맞춤 */
   width: calc(100vw - 300px);
-  min-height: 100vh;
+  min-height: 90vh;
   display: grid;
-  place-items: start center;                  /* 가로 중앙, 세로 위쪽에서 시작 */
+  place-items: start center;                /* 가로 중앙, 세로 위쪽에서 시작 */
   padding: 12vh 6vw 10vh;
   background-color: #181818;
 }
 
 /* 콘텐츠 최대폭 제한 */
-.home-wrap { width: min(100%, 980px); }
+.home-wrap { 
+  width: min(100%, 980px);
+  }
 
 /* 제목은 상단 근처 */
 #mainpart > .home-wrap > h1 {
