오답복습가는거 연결

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
                     <button class="Reselect" onclick="goToPage()">DAY 재선택</button>
                 </form>
 
-                <form action=>
+                <form action="{{ url_for('remind') }}">
                     <button class="Review">오답복습</button>
                 </form>
 
