파일형식 정적으로 변경

--- a/templates/wb.html
+++ b/templates/wb.html
@@ -76,6 +76,6 @@
 </div>
 
 <!-- body 끝 직전 -->
-<script src="../static/javascript/wb.js" defer></script>
+<script src="{{ url_for('static', filename='javascript/wb.js') }}" defer></script>
 </body>
 </html>
