--- a/templates/example.html
+++ b/templates/example.html
@@ -44,7 +44,7 @@
     </div>
     
     <!-- 정적 JS 불러오기 -->
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/script2.js') }}"></script>
+    <script src="{{ url_for('static', filename='javascript/script.js') }}"></script>
+    <script src="{{ url_for('static', filename='javascript/script2.js') }}"></script>
 </body>
 </html>
