--- a/templates/result.html
+++ b/templates/result.html
@@ -15,7 +15,7 @@
     <button class="goHome" onclick="goHome()">🏠 홈으로 돌아가기</button>
   </div>
 
-  <script src="../script3.js"></script>
+  <script src="{{ url_for('static', filename='javascript/script3.js') }}"></script>
 
 </body>
 </html>
