--- a/templates/odap.html
+++ b/templates/odap.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>영어 수행 연습</title>
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/odapcss.css">
     <link rel="stylesheet" href="../static/css/responsive.css">
 </head>
 
 <body>
+
 <form action="main_page">
-    <button type="submit">나가기</button>  
+    <button class="odapbtn" type="submit">나가기</button>  
 </form>
   
 
