사이드바 버튼 주소 연결

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
         <button class="Reselect" type="submit">DAY 재선택</button>
       </form>
 
-                <form action=>
+                <form action="{{ url_for('remind') }}">
                     <button class="Review">오답복습</button>
                 </form>
 
