--- a/templates/index.html
+++ b/templates/index.html
@@ -46,22 +46,64 @@
       <h1>welc<span style="color:#35b3f2;">o</span>me!</h1>
 
       <form id="goStart"></form>
-       <!--날짜들-->>
+       <!--날짜들-->
       <div class="day-select">
-        <button type="button">17</button>
-        <button type="button">18</button>
-        <button type="button">19</button>
-        <button type="button">20</button>
-        <button type="button">21</button>
-        <button type="button">22</button>
-        <button type="button">23</button>
-        <button type="button">24</button>
-        <button type="button">25</button>
-        <button type="button">26</button>
-        <button type="button">27</button>
-        <button type="button">28</button>
-        <button type="button">29</button>
-        <button type="button">30</button>
+        <input type="checkbox" id="word17">
+        <label for="word17">
+          17
+        </label>
+        <input type="checkbox" id="word18">
+        <label for="word18">
+          18
+        </label>
+        <input type="checkbox" id="word19">
+        <label for="word19">
+          19
+        </label>
+        <input type="checkbox" id="word20">
+        <label for="word20">
+          20
+        </label>
+        <input type="checkbox" id="word21">
+        <label for="word21">
+          21
+        </label>
+        <input type="checkbox" id="word22">
+        <label for="word22">
+          22
+        </label>
+        <input type="checkbox" id="word23">
+        <label for="word23">
+          23
+        </label>
+        <input type="checkbox" id="word24">
+        <label for="word24">
+          24
+        </label>
+        <input type="checkbox" id="word25">
+        <label for="word25">
+          25
+        </label>
+        <input type="checkbox" id="word26">
+        <label for="word26">
+          26
+        </label>
+        <input type="checkbox" id="word27">
+        <label for="word27">
+          27
+        </label>
+        <input type="checkbox" id="word28">
+        <label for="word28">
+          28
+        </label>
+        <input type="checkbox" id="word29">
+        <label for="word29">
+          29
+        </label>
+        <input type="checkbox" id="word30">
+        <label for="word30">
+          30
+        </label>
       </div>
     </div>
   </div>
