--- a/templates/wb.html
+++ b/templates/wb.html
@@ -21,7 +21,7 @@
             <div class="logo">SEMICOLON</div>
             <div class="sidelinks">
                 <div id="linktologin">로그인</div>
-                <div id="linktomain">단어 테스트</div>
+                <div id="cheerup">응원하기</div>
                 <div id="dayselectheader">DAY 선택</div>
             </div>
             <div class="dayselect">
