example.js 만들고 html과 연결

--- a/templates/example.html
+++ b/templates/example.html
@@ -46,5 +46,6 @@
     <!-- 정적 JS 불러오기 -->
     <script src="{{ url_for('static', filename='javascript/script.js') }}"></script>
     <script src="{{ url_for('static', filename='javascript/script2.js') }}"></script>
+    <script src="{{ url_for('static', filename='javascript/example.js') }}"></script>
 </body>
 </html>
