wb.js queryString 없으면 17로 리다이렉트

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
         <button class="Review" type="submit">오답복습</button>
       </form>
 
-      <form action="{{ url_for('words?day=17') }}">
+      <form action="{{ url_for('words') }}">
         <button type="submit">단어장 바로가기</button>
       </form>
 
