--- a/templates/wb.html
+++ b/templates/wb.html
@@ -24,6 +24,7 @@
                 <div id="cheerup">응원하기</div>
                 <div id="dayselectheader">DAY 선택</div>
             </div>
+            <!-- 리스트 -->
             <div class="dayselect">
                 <div class="dayline1">
                     <div id="day17">17</div>
