day 19 745번 까지 완료 남은거 15개!

--- a/templates/wb.html
+++ b/templates/wb.html
@@ -20,7 +20,10 @@
         <div class="sidebar">
             <div class="logo">SEMICOLON</div>
             <div class="sidelinks">
-                <div id="linktologin">로그인</div>
+                
+                <!-- 딱히 필요 없을듯 해서 지움-->
+                <!-- <div id="linktologin">로그인</div> -->
+            
                 <div id="cheerup">응원하기</div>
                 <div id="dayselectheader">DAY 선택</div>
             </div>
