디버깅 못함

--- a/templates/example.html
+++ b/templates/example.html
@@ -8,8 +8,8 @@
     <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
     <link rel="arrow icon" href="./arrow.png" type="image/x-icon">
     <!-- 정적 CSS 불러오기 -->
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./responsive.css">
+    <link rel="stylesheet" href="../static/css/style.css" />
+    <!-- <link rel="stylesheet" href="../static/css/responsive.css" /> -->
 </head>
 
 <body> 
