--- a/static/css/style.css
+++ b/static/css/style.css
@@ -95,54 +95,6 @@ select {
   cursor: pointer;
 }
 
-input[id="menuicon"] {
-    display: none;
-}
-input[id="menuicon"] + label{
-  position: fixed;     
-  top: min(4vh, 6vw);     
-  left: min(4vh, 6vw);   
-  margin: 0;                     
-  width: min(6vh, 9vw);
-  height: min(4vh, 6vw);
-  cursor: pointer;
-  z-index: 1001;                 
-}
-
-input[id="menuicon"] + label span {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: min(0.7vh, 1.05vw);
-    border-radius: min(0.7vh, 1.05vw);
-    transition: all .35s;
-}
-input[id="menuicon"] + label span:nth-child(1) {
-    top: 0;
-    background: #d8e4eb;
-}
-input[id="menuicon"] + label span:nth-child(2) {
-    top: 50%;
-    transform: translateY(-50%);
-    background: #35b3f2;
-}
-input[id="menuicon"] + label span:nth-child(3) {
-    bottom: 0;
-    background: #d8e4eb;
-}
-
-input[id="menuicon"]:checked + label span:nth-child(1) {
-    top: 50%;
-    transform: translateY(-50%) rotate(45deg);
-}
-input[id="menuicon"]:checked + label span:nth-child(2) {
-    opacity: 0;
-}
-input[id="menuicon"]:checked + label span:nth-child(3) {
-    bottom: 50%;
-    transform: translateY(50%) rotate(-45deg)
-}
-
 .sidebar {
   position: fixed;
   top: 0;
@@ -175,285 +127,44 @@ input[id="menuicon"]:checked + label span:nth-child(3) {
   transition: background-color 0.2s ease;
 }
 
-/* 예문창 */
-
-.exmplbox {
-  background-color: #474747;
-  border-radius: min(12vh, 10vw);
-  width: min(130vh, 110vw);
-  height: min(63vh, 52vw);
-  margin: min(8vh, 12vw) auto;
-  padding: min(3vh, 4.5vw) min(4vh, 6vw);
-  box-shadow: 0 0 min(1.3vh, 2vw) rgba(0, 0, 0, 0.3);
-  font-family: "NanumSquareExtraBold";
-}
-
-.propart {
+.container {
   display: flex;
-  align-items: center;
-  position: relative;
-}
-
-.propart.star {
-  position: absolute;
-  margin-right: 0.5%;
-  margin-top: 0.5%;
-  font-size: 3vw;
-}
-
-#progress {
-  margin-left: 1.7%;
-  margin-top: 1.2%;
-  width: 16%;
-  height: 8%;
   justify-content: center;
   align-items: center;
-  display: flex;
-  font-family: "NanumSquareExtraBold";
-  font-size: 1.6vw;
-  background-color: #35b3f2;
-  border: none;
-  border-radius: 30px;
-  padding: 1.7% 1.6%;
-}
-
-.cpg, .totalpg {
-    color: white;
-    font-family: "NanumSquareExtraBold";
-}
-
-#exmplpart {
-  align-self: stretch;
-  width: 100%;
-  align-items: center;
-  text-align: left !important;
-  margin: 0;
-  padding: 0;
-}
-
-#exp, #asp {
-  display: block;
-  width: 100%;
-  margin-top: 2.5%;
-  margin-left: 2%;
-  text-align: left;
-  font-size: 1.9vw;
-}
-
-#exp {
-  display: flex;
-  text-align: center;
-  align-items: center;
-}
-
-.answer {
-  background-color: #d8e4eb;
-  color: #d74b4b !important;
-  width: fit-content;
-  height: 20%;
-  padding-top: 1.5%;
-  padding: 1% 2%;
-  font-size: 1.9vw;
-  border: none;
-  border-radius: 10px;
-  outline: none;
-  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+  gap: 10%;
+  height: 50vh;
+  padding: 20px;
   box-sizing: border-box;
-}
-
-.feedback {
-  align-self: stretch;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  text-align: left !important;
-  margin-top: 2.5%;
-  margin-left: 2%;
-  padding: 0;
-}
-
-
-
-#checkpart {
-  background-color: #d8e4eb;
-  color: #35b3f2 !important;
-  width: fit-content;
-  height: 20%;
-  padding-top: 1.5%;
-  padding: 1% 2%;
-  font-size: 1.9vw;
-  border: none;
-  border-radius: 10px;
-  outline: none;
-  transition: border-color 0.3s ease, box-shadow 0.3s ease;
-  box-sizing: border-box;
-}
-
-#container {
-  display: flex;
-  text-align: center;
-  justify-content: center;
 }
 
 .okBtn {
-  position: absolute;
-  top: 470px;
-  width: 11%;
-  height: 9.5%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  background-color: #35b3f2;
-  color: white;
-  border: none;    
-  border-radius: 22px;
-  padding: 1.8% 1%;
-  font-family: "NanumSquareExtraBold";
-  font-size: 2.2vw;
+  padding: 1em 2em;
+  font-size: 2rem;
+  background-color: #333;
+  color: #66cc33;
+  border: none;
+  border-radius: 8px;
   cursor: pointer;
-  transition: background-color 0.2s ease;
 }
 
-.okBtn:hover {
-  background-color: #35a0d5;
+.progress {
+  color: #66cc33;
+  font-weight: lighter;
 }
 
-.okBtn:active {
-  background-color: #35a0d5;
-  transform: scale(0.96);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
-
-/* 결과창 */
-
-.bar-wrap {
+#answer {
+  background-color: #181818;
+  color: white !important;
   width: 100%;
-  margin-top: 13%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.bar {
-  width: 90%;
-  height: 80px;
-  background: rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-  display: flex;
-  overflow: hidden;
-  align-items: center;
-  box-shadow: 0 2px 0 rgba(255, 255, 255, 0.02) inset;
-}
-
-.segment {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  min-width: 0;
-  font-size: 1.8vw;
-  color: white;
-  padding: 0 16px;
+  max-width: 178px;
+  padding: 12px 12px;
+  font-size: 2vw;
+  border: none;
+  border-radius: 8px;
+  outline: none;
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
   box-sizing: border-box;
-  white-space: nowrap;
 }
-
-.segment.correct {
-  background: #35b3f2;
-  width: 70%;
-  justify-content: left;
-  border-top-left-radius: 8px;
-  border-bottom-left-radius: 8px;
-}
-
-.segment.wrong {
-  background: #d74b4b;
-  width: 30%;
-  justify-content: right;
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
-}
-
-.label {
-  display: inline-block;
-}
-
-.label.outside {
-  position: absolute;
-  color: #cfcfcf;
-  font-weight: 700;
-}
-
-.segment.correct .label.outside {
-  right: -8px;
-  color: #35b3f2;
-  font-weight: 800;
-}
-
-.segment.wrong .label.outside {
-  left: -8px;
-  color: #d74b4b;
-  font-weight: 800;
-}
-
-.controls {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.correctBtn, .wrongBtn {
-  position: absolute;
-  top: 470px;
-  width: 11%;
-  height: 9.5%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  color: white;
-  border: none;    
-  border-radius: 22px;
-  padding: 1.8% 1%;
-  font-family: "NanumSquareExtraBold";
-  font-size: 2.2vw;
-  cursor: pointer;
-  transition: background-color 0.2s ease;
-}
-
-.correctBtn {
-  background-color: #35b3f2;
-  margin-right: 30%;
-}
-
-.correctBtn:hover {
-  background-color: #35a0d5;
-}
-
-.correctBtn:active {
-  background-color: #35a0d5;
-  transform: scale(0.96);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
-
-.wrongBtn {
-  background-color: #d74b4b;
-  margin-left: 30%;
-}
-
-.wrongBtn:hover {
-  background-color: #ba3939;
-}
-
-.wrongBtn:active {
-  background-color: #ba3939;
-  transform: scale(0.96);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
-
 
 .loginpart {
   margin: 0;
