--- a/templates/example.html
+++ b/templates/example.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
     <link rel="arrow icon" href="./arrow.png" type="image/x-icon">
     <!-- 정적 CSS 불러오기 -->
-    <link rel="stylesheet" href="../static/css/style.css" />
+    <link rel="stylesheet" href="../static/css/example.css" />
     <!-- <link rel="stylesheet" href="../static/css/responsive.css" /> -->
 </head>
 
