--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>회원가입</title>
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png')}}" type="image/x-icon">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/responsive.css') }}">
 </head>
