--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
   <title>영어 수행 연습</title>
   <link rel="stylesheet" href="../static/css/style.css"/>
   <link rel="stylesheet" href="../static/css/responsive.css"/>
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png')}}" type="image/x-icon">
 </head>
 
 <body>
